fixed search for mobile, slightly adjusted login and search margins

--- a/app/views/widgets/shared/_omninav.html
+++ b/app/views/widgets/shared/_omninav.html
@@ -119,7 +119,7 @@
                                 <input class="gsc-search-button" title="search" type="button" value="Search"/>
                             </td>
                             <td class="gsc-clear-button">
-                                <div class="gsc-clear-button" title="clear results"> dfasdfsdf</div>
+                                <div class="gsc-clear-button" title="clear results">&nbsp;</div>
                             </td>
                         </tr>
                     </tbody>
