--- a/app/assets/stylesheets/widgets/hero/side_panel.scss
+++ b/app/assets/stylesheets/widgets/hero/side_panel.scss
@@ -39,8 +39,7 @@
 
   .cd-arrow-left, .cd-arrow-right {
     position: absolute;
-    top: 0;
-    bottom: 0;
+    top: 115px;
     height: 50px;
     width: 50px;
     text-align: center;
@@ -48,7 +47,7 @@
     z-index: 668;
     pointer-events:all;
     background-color: white;
-    opacity: .8;
+    opacity: .7;
 
     a {
       display: inline-block;
