--- a/subprojects/degrees-and-programs/source/static/app/assemble/degrees-and-programs.hbs
+++ b/subprojects/degrees-and-programs/source/static/app/assemble/degrees-and-programs.hbs
@@ -3,7 +3,7 @@ title: Degrees and Programs
 template: true
 body-class: "degrees-and-programs"
 layout: degrees-and-programs.hbs
-cascade-build: true
+cascade-build: false
 ---
 <!-- Set cascade-build to false if developing locally -->
 
