Changed color of degree type in D&P results from #777777 to #595959 (passes color contrast checker)

--- a/subprojects/degrees-and-programs/source/static/app/sass/partials/_dap-results.scss
+++ b/subprojects/degrees-and-programs/source/static/app/sass/partials/_dap-results.scss
@@ -328,7 +328,7 @@ $dap-result-breakpoint: rem-calc(600);
 			margin: rem-calc(5 0 0);
 
 			li {
-				color: $boulder;
+				color: $scorpion;
 				float: left;
 
 				&:after {
