--- a/subprojects/degrees-and-programs/source/static/app/assemble/partials/dap-graduate-form.hbs
+++ b/subprojects/degrees-and-programs/source/static/app/assemble/partials/dap-graduate-form.hbs
@@ -26,7 +26,7 @@
 				<div class="columns small-12 medium-6">
 					<div class="field-container">
 						<label class="program-type button" for="dap-graduate-program-master">
-							<input id="dap-graduate-program-master" name="dap-graduate-program-master" type="checkbox" value="masters" />
+							<input id="dap-graduate-program-master" name="dap-graduate-program-master" type="checkbox" value="masters,dual/joint,integrated/4+1,accelerated 3+2" />
 							<div class="inner">
 								{{svg "check"}}
 								<span>Masters Programs</span>
@@ -48,10 +48,10 @@
 				<div class="columns small-12 medium-6">
 					<div class="field-container">
 						<label class="program-type button" for="dap-graduate-program-bridge">
-							<input id="dap-graduate-program-bridge" name="dap-graduate-program-bridge" type="checkbox" value="4+1 and bridge" />
+							<input id="dap-graduate-program-bridge" name="dap-graduate-program-bridge" type="checkbox" value="bridge,integrated/4+1,accelerated 3+2,post-baccalaureate,certificate,dual/joint,credential and transitional" />
 							<div class="inner">
 								{{svg "check"}}
-								<span>4+1 Bridge Programs</span>
+								<span>Accelerated, Bridge, &amp; Special Programs</span>
 							</div>
 						</label>
 					</div>
