--- a/subprojects/degrees-and-programs/source/static/app/assemble/partials/dap-undergraduate-form.hbs
+++ b/subprojects/degrees-and-programs/source/static/app/assemble/partials/dap-undergraduate-form.hbs
@@ -26,7 +26,7 @@
 				<div class="columns small-12 medium-6">
 					<div class="field-container">
 						<label class="program-type button" for="dap-undergraduate-program-major">
-							<input id="dap-undergraduate-program-major" name="dap-undergraduate-program-major" type="checkbox" value="major" />
+							<input id="dap-undergraduate-program-major" name="dap-undergraduate-program-major" type="checkbox" value="major,integrated/4+1,accelerated 3+2" />
 							<div class="inner">
 								{{svg "check"}}
 								<span>Majors</span>
@@ -48,10 +48,10 @@
 				<div class="columns small-12 medium-6">
 					<div class="field-container">
 						<label class="program-type button" for="dap-undergraduate-program-bridge">
-							<input id="dap-undergraduate-program-bridge" name="dap-undergraduate-program-bridge" type="checkbox" value="4+1 and bridge" />
+							<input id="dap-undergraduate-program-bridge" name="dap-undergraduate-program-bridge" type="checkbox" value="bridge,integrated/4+1,accelerated 3+2" />
 							<div class="inner">
 								{{svg "check"}}
-								<span>4+1 Bridge Programs</span>
+								<span>Accelerated &amp; Bridge Programs</span>
 							</div>
 						</label>
 					</div>
