syncing static changes made to Cascade templates
changes made in Cascade by BRIE and CU devs to navigation bar, footer,
some JS for google tag manager so more in sync

--- a/app/views/layouts/3_column.html.erb
+++ b/app/views/layouts/3_column.html.erb
@@ -12,7 +12,7 @@
 
     <div id="theme" class="<%= yield(:theme) %>">
 
-        <span class="hidden"><a href="#main" title="Skip navigation and jump directly to the main content of this page">Jump to the main content of this page</a></span>
+        <a class="skip-link" href="#main" tabindex="-1" title="Skip navigation and jump directly to the main content of this page">Jump to the main content of this page</a>
 
         <div id="fb-root"></div>
 
