--- a/app/views/widgets/shared/_header.html
+++ b/app/views/widgets/shared/_header.html
@@ -3,7 +3,7 @@
 <%= render 'widgets/shared/omninav' %>
 
     <div class="maxWidth">
-        <nav class="mainNav"><a class="logo" href="../../index.aspx" itemscope="itemscope" itemtype="http://schema.org/Organization"><span itemprop="name">Chapman University</span></a>
+        <nav class="mainNav"><a class="logo" href="../../index.aspx" itemscope="itemscope" itemtype="http://schema.org/Organization" title="Chapman University Website Home Page"><span itemprop="name">Chapman University</span></a>
             <div class="mainNavExpand"><a href="javascript:;">
                 Menu <span class="arrow">&#160;</span></a>
             </div>
@@ -69,24 +69,32 @@
                 <li><a href="../../arts/index.aspx"><span>Arts</span></a>
                 </li>
                 
-                <li><a href="../../campus-life/index.aspx"><span>Campus Life</span></a>
+                <li class="has-dropdown"><a href="../../campus-life/index.aspx"><span>Campus Life</span></a>
                     <div class="subNavLinks clearfix">
-                    <ul>
-                    <li><a class="icon icon-paw" href="http://www.chapmanathletics.com/landing/index">Athletics</a>
-                    </li>
-                    <li><a class="icon icon-hand" href="../../diversity/index.aspx">Diversity and Inclusion</a></li>
-                    <li><a class="icon icon-calendar4" href="https://events.chapman.edu/ ">Events</a></li>
-                    <li><a class="icon icon-earth" href="../../about/fish-interfaith-center/index.aspx">Fish Interfaith Center</a></li>
-                    <li><a class="icon icon-heart3" href="../../students/health-and-safety/index.aspx">Health and Safety</a></li>
-                    <li><a class="icon icon-home2" href="../../students/services/housing-and-residence/index.aspx">Residence Life</a></li>
-                    <li><a class="icon icon-smiley" href="../../students/life/index.aspx">Student Life</a></li>
-                    </ul>
+                        <ul>
+                            <li><a class="icon icon-paw" href="http://www.chapmanathletics.com/landing/index">Athletics</a></li>
+                            <li><a class="icon icon-hand" href="../../diversity/index.aspx">Diversity and Inclusion</a></li>
+                            <li><a class="icon icon-calendar4" href="https://events.chapman.edu/ ">Events</a></li>
+                            <li><a class="icon icon-earth" href="../../about/fish-interfaith-center/index.aspx">Fish Interfaith Center</a></li>
+                            <li><a class="icon icon-heart3" href="../../students/health-and-safety/index.aspx">Health and Safety</a></li>
+                            <li><a class="icon icon-home2" href="../../students/services/housing-and-residence/index.aspx">Residence Life</a></li>
+                            <li><a class="icon icon-smiley" href="../../students/life/index.aspx">Student Life</a></li>
+                        </ul>
                     </div>
-                </li>
+                </li>                
                 
-                
                 </li>
-                <li><a href="../../research-and-institutions/index.aspx"><span>Research</span></a>
+                <li class="has-dropdown"><a href="../../research/index.aspx"><span>Research</span></a>
+                	<div class="subNavLinks last clearfix">
+                        <ul>
+                            <li><a class="icon icon-cu-monogram" href="../../research/pre-award/index.aspx">Pre-Award Administration</a></li>
+                            <li><a class="icon icon-cu-monogram" href="../../research/post-award/index.aspx">Post-Award Administration</a></li>
+                            <li><a class="icon icon-cu-monogram" href="../../research/integrity/index.aspx">Research Integrity</a></li>
+                            <li><a class="icon icon-cu-monogram" href="../../research/institutes-and-centers/index.aspx">Institutes and Centers</a></li>
+                            <li><a class="icon icon-cu-monogram" href="../../research/office-undergraduate-research-creative-activity/index.aspx">Undergraduate Research and Creative Activity</a></li>
+                            <li><a class="icon icon-cu-monogram" href="../../research/graduate-research/index.aspx">Graduate Research Support</a></li>
+                        </ul>
+                    </div>
                 </li>
                 <li class="has-dropdown"><a href="../../support-chapman/index.aspx"><span>Support</span></a>
                     <div class="subNavLinks last clearfix">
