--- a/app/views/widgets/shared/_footer.html
+++ b/app/views/widgets/shared/_footer.html
@@ -10,18 +10,28 @@
                         <br/> <span class="c">18&#176; <abbr title="celcius">C</abbr></span>
                     </div>
                 </div>
-                <div class="address" itemtype="http://schema.org/PostalAddress"><span itemprop="streetAddress">One University Drive</span>
-                    <br/> <span itemprop="addressLocality">ORANGE</span>, <span itemprop="addressRegion">CA</span> <span itemprop="postalCode">92866</span>
-                    <br/> <span itemprop="telephone">(714) 997-6815</span>
+                <div class="address" itemtype="http://schema.org/PostalAddress">
+                    MAIN CAMPUS:<br />
+                    <span itemprop="streetAddress">One University Drive</span>
+                    <br /> <span itemprop="addressLocality">Orange</span>, 
+                    <span itemprop="addressRegion">CA</span> 
+                    <span itemprop="postalCode">92866</span>
+                    <br /> <span itemprop="telephone">(714) 997-6815</span>
+                    <br /><br />
+                    RINKER HEALTH SCIENCE CAMPUS:
+                    <br /><span itemprop="streetAddress">9401 Jeronimo Road</span>
+                    <br /> <span itemprop="addressLocality">Irvine</span>, 
+                    <span itemprop="addressRegion">CA</span> 
+                    <span itemprop="postalCode">92618</span>
                 </div>
-                <div class="copyright">&#169; <span class="copyrightYear">2013</span> Chapman University</div>
+                <div class="copyright">&#169; <span class="copyrightYear">2015</span> Chapman University</div>
             </div>
             <div class="meta-links"><a class="meta-link first" href="../../about/maps-directions/index.aspx">Get Directions</a> <a class="meta-link" href="../../about/contact-us.aspx">Give Us a Call</a>
             </div>
             <div class="footer-ribbon"><span class="footer-ribbon-before">&#160;</span>
                 <div class="footer-links">
                     <div class="footer-links-group">
-                        <h3>Connect</h3>
+                        <h2>Connect</h2>
                         <ul>
                             <li><a href="http://blogs.chapman.edu/happenings/">News</a>
                             </li>
@@ -36,9 +46,11 @@
                         </ul>
                     </div>
                     <div class="footer-links-group">
-                        <h3>Resources</h3>
+                        <h2>Resources</h2>
                         <ul>
                             <li><a href="../../a-z/index.aspx">A-Z Listing</a>
+                            </li>
+                            <li><a href="../../consumer-information-disclosures/index.aspx">Consumer Disclosures</a>
                             </li>
                             <li><a href="../../faculty-staff/human-resources/jobs/index.aspx">Employment</a>
                             </li>
@@ -46,12 +58,12 @@
                             </li>
                             <li><a href="../../students/tuition-and-aid/index.aspx">Tuition and Aid</a>
                             </li>
-                            <li><a href="../../campus-services/information-systems/security/privacy-policy.aspx">Privacy</a>
+                            <li><a href="../../campus-services/information-systems/policies-and-procedures/privacy-policy.aspx">Privacy</a>
                             </li>
                         </ul>
                     </div>
                     <div class="footer-links-group">
-                        <h3>Services</h3>
+                        <h2>Services</h2>
                         <ul>
                             <li><a href="../../academics/libraries/index.aspx">Libraries</a>
                             </li>
@@ -59,14 +71,14 @@
                             </li>
                             <li><a href="../../students/health-and-safety/title-ix.aspx">Title IX</a>
                             </li>
-                            <li><a href="../../campus-services/public-safety/emergency.aspx">Emergency Information</a>
+                            <li><a href="../../emergency/alert.aspx">Emergency Information</a>
                             </li>
-                            <li><a href="../../feedback-form.aspx">Feedback</a>
+                            <li><a href="../../website-feedback-form.aspx">Feedback</a>
                             </li>
                         </ul>
                     </div>
                     <div class="footer-links-group footer-social-icons">
-                        <h3>Social</h3>
+                        <h2>Social</h2>
                         <ul class="socialIcons clearfix">
                             <li><a class="twitter hide-text" href="http://twitter.com/#!/chapmanu" target="_blank">Twitter</a>
                             </li>
