Post-Launch Updates

--- a/subprojects/campus-map/source/static/app/assemble/modules/_map-container.hbs
+++ b/subprojects/campus-map/source/static/app/assemble/modules/_map-container.hbs
@@ -22,7 +22,7 @@ module: true
 				</a>
 			</div>
 
-			<div id="virtualTour-mapCanvas"></div>
+			<div id="virtualTour-mapCanvas" style="height: 100vh; width: 100%;"></div>
 
 			<div id="streetViewCanvas"></div>
 
