--- a/subprojects/campus-map/source/static/app/sass/modules/_map-container.scss
+++ b/subprojects/campus-map/source/static/app/sass/modules/_map-container.scss
@@ -60,9 +60,11 @@
 	#virtualTour-mapCanvas {
 		width: 100%;
 		height: 100%;
-		min-height: 100%;
+		// min-height: 100%;
 		position: absolute;
 		top: 0;
+		right: 0;
+		bottom: 0;
 		left: 0;
 	}
 
