--- a/app/assets/stylesheets/components/main_navigation.scss
+++ b/app/assets/stylesheets/components/main_navigation.scss
@@ -92,7 +92,7 @@
       line-height: 1.4em;
       color: $grey;
       padding: 0.1em;
-      margin-top: -4px;
+      margin: -4px 5px 10px 0;
       width: 24px;
       height: 24px;
       float: left;
@@ -109,7 +109,36 @@
       }
     }
   }
-
+  .icon-california {
+    &:before {
+      font-size: 1.2em;
+      margin-top: -5px;
+    }
+  }
+  .icon-cu-monogram {
+    &:before {
+      font-size: 1.3em;
+      margin-top: -7px;
+    }
+  }
+  .icon-cu-window {
+    &:before {
+      font-size: 1.25em;
+      margin-top: -7px;
+    }
+  }
+  .icon-graduation {
+    &:before {
+      font-size: 1.25em;
+      margin-top: -7px;
+    }
+  }
+  .icon-books {
+    &:before {
+      font-size: 1.1em;
+      margin-top: -5px;
+    }
+  }
 
   &.active {
     @include bp(m) {
